trunk/appointment/src/objects/Time_Off__c.object
<CustomObject>
    <fields>
        <fullName>All_Day__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check box indicates time off is for the entire day.</description>
        <inlineHelpText>Check if the time off for the date is for the entire day.</inlineHelpText>
        <label>All Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_List__c</fullName>
        <label>Start Time List</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_DateTime__c</fullName>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Time_List__c</fullName>
        <label>Stop Time List</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Time Off</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Off Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>